k8s/07-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: fl-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fl-frontend
  template:
    metadata:
      labels:
        app: fl-frontend
    spec:
      containers:
      - name: frontend
        image: fl-frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: fl-system
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: fl-frontend
