k8s/13-minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fl-minio
  namespace: fl-platform
  labels:
    app: fl-minio
    app.kubernetes.io/part-of: federated-learning
    app.kubernetes.io/component: object-storage
spec:
  type: ClusterIP
  selector:
    app: fl-minio
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: api
    - port: 9001
      targetPort: 9001
      protocol: TCP
      name: console
